--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,19 +4,16 @@ on:
     branches:
       - master
       - dev
-# workflow level
-# Environment vars for all jobs
-# unless a job overrides
+
 env:
   MONGODB_DB_NAME: gha-demo
+  MONGODB_CLUSTER_ADDRESS: cluster0.usn2x59.mongodb.net
+  MONGODB_USERNAME: vdelaplainess
+  MONGODB_PASSWORD: HgptZpF2gMeRPoHY
+  PORT: 8080
 
 jobs:
   test:
-     env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.usn2x59.mongodb.net
-      MONGODB_USERNAME: vdelaplainess
-      MONGODB_PASSWORD: HgptZpF2gMeRPoHY
-      PORT: 8080
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -29,15 +26,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://$MONGODB_CLUSTER_ADDRES:$PORT
+        run: npm start & npx wait-on http://$MONGODB_CLUSTER_ADDRESS:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "echo MONDODB_USERNAME: ${{ env.MONGODB_USERNAME }}}"
+        run: echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run: |        
-          echo ".."
+        run: echo ".."
