--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   MONGODB_DB_NAME: gha-demo
-  MONGODB_CLUSTER_ADDRESS: cluster0.usn2x59.mongodb.net
+  MONGODB_CLUSTER_ADDRESS: c@cluster0.usn2x59.mongodb.net
   MONGODB_USERNAME: vdelaplainess
   MONGODB_PASSWORD: HgptZpF2gMeRPoHY
   PORT: 8080
