--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   test:
     env:
-      MONGODB_CLUSTER_ADDRESS: c@cluster0.usn2x59.mongodb.net
+      MONGODB_CLUSTER_ADDRESS: cluster0.usn2x59.mongodb.net
       MONGODB_USERNAME: vdelaplainess
       MONGODB_PASSWORD: HgptZpF2gMeRPoHY
       PORT: 8080
