--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,9 @@ on:
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
-  environment: testing
   test:
+    # only execute if the environment meets the filter requirments
+    environment: testing
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.usn2x59.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
